# openstack-ansible-os_sahara

./: .gitignore  .gitreview  CONTRIBUTING.rst  README.rst  Vagrantfile  setup.cfg  tox.ini
defaults/: main.yml
doc/source/: conf.py  configure-sahara.rst  index.rst
examples/: playbook.yml
extras/: group_vars_sahara.yml  haproxy_sahara.yml  os-sahara-install.yml  repo-sahara.yml  user_secrets_sahara.yml
extras/env.d/: sahara.yml
handlers/: main.yml
meta/: main.yml
releasenotes/source/: conf.py
tasks/: main.yml  sahara_db_setup.yml  sahara_init.yml  sahara_init_common.yml  sahara_init_systemd.yml  sahara_init_upstart.yml  sahara_install.yml  sahara_install_apt.yml  sahara_post_install.yml  sahara_pre_install.yml  sahara_service_setup.yml  sahara_upstart_common_init.yml  sahara_upstart_init.yml  sahara_uwsgi.yml
templates/: rootwrap.conf.j2  sahara-systemd-init.j2  sahara-systemd-tmpfiles.j2  sahara-upstart-init.j2  sahara-uwsgi.ini.j2  sahara.conf.j2
tests/: ansible-role-requirements.yml  inventory  os_sahara-overrides.yml  sahara-overrides.yml  test-install-infra.yml  test-install-nova.yml  test-install-sahara.yml  test-install-tempest.yml  test-prepare-containers.yml  test-prepare-host.yml  test-sahara-functional.yml  test-vars.yml  test.yml
tests/host_vars/: localhost.yml
vars/: debian.yml  main.yml  redhat-7.yml  suse-42.yml  suse.yml  ubuntu-14.04.yml  ubuntu-16.04.yml  ubuntu.yml
zuul.d/: jobs.yaml  project.yaml
