[metadata]
name = openstack-ansible-os_sahara
summary = os_sahara for OpenStack Ansible
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/openstack-ansible-os_sahara/latest/
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
